# broadening_function

./: README.md  pyproject.toml
bf_fit/: bffunc_fit_B1EB_call_appct_indivGPs.py  bffunc_fit_B1EB_tertiary_acorr_indivGPs.py  bffunc_fit_binary_acorr_indivGPs_CELERITE2_SHOfixQ.py  bffunc_fit_binary_call_CELERITE2_SHOfixQ.py
